<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:filterTouchesWhenObscured="true"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/password_verification_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:filterTouchesWhenObscured="true"
        android:hint="@string/password_verification_hint"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok_button"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button"/>
    </LinearLayout>
</LinearLayout>
